<resources>
    <string name="AccountNumberDots" translatable="false">ꞏ ꞏ ꞏ ꞏ ꞏ ꞏ ꞏ ꞏ ꞏ ꞏ</string>
    <string name="fragment_item_transition_name" translatable="false">fragment_item_transition_name_%d</string>
    <string name="fragment_detail_transition_name" translatable="false">fragment_detail_transition_name</string>
    <string name="app_name">MoneyBook</string>
    <string name="Overview">Overview</string>
    <string name="Accounts">Accounts</string>
    <string name="SeeAll">See all</string>
    <string name="Home">Home</string>
    <string name="Settings">Settings</string>
    <string name="Search">Search</string>
    <string name="Dues">Dues</string>
    <string name="Budgets">Budgets</string>
    <string name="Add">Add</string>
    <string name="AddTransaction">Add Transaction</string>
    <string name="Checking">Checking</string>
    <string name="NewTransaction">New Transaction</string>
    <string name="Title">Title</string>
    <string name="Earning">Earning</string>
    <string name="Debt">Debt</string>
    <string name="Claim">Claim</string>
    <string name="Expense">Expense</string>
    <string name="Save">Save</string>
    <string name="Value">Value</string>
    <string name="Value_per_Contact">Value per Contact</string>
    <string name="Contacts">Contacts</string>
    <string name="Notes">Notes</string>
    <string name="Date">Date</string>
    <string name="ChooseDate">Choose Date</string>
    <string name="OpenCalculator">Open Calculator</string>
    <string name="EmptyTransactionTitle">Please enter a title.</string>
    <string name="InvalidTransactionDate">Please enter a valid date (%s).</string>
    <string name="InvalidTransactionDueDate">Please enter a valid due date (%s).</string>
    <string name="InvalidTransactionValue_NotPositive">Please enter a value greater than zero.</string>
    <string name="InvalidTransactionValue_TooHigh">Please do only enter values below 1.000.000.</string>
    <string name="Account">Account</string>
    <string name="Budget">Budget</string>
    <string name="Housekeeping">Housekeeping</string>
    <string name="Leisure">Leisure</string>
    <string name="Shopping">Shopping</string>
    <string name="Delete">Delete</string>
    <string name="Edit">Edit</string>
    <string name="x_selected">%d selected</string>
    <string name="EditTransaction">Edit Transaction</string>
    <string name="AddAccount">Add Account</string>
    <string name="Name">Name</string>
    <string name="NewAccount">New Account</string>
    <string name="EditAccount">Edit Account</string>
    <string name="EmptyAccountName">Please enter an account name.</string>
    <string name="DeleteAccount">Delete Account</string>
    <string name="DeleteAccounts">Delete Accounts</string>
    <string name="aldm_DeleteAccount">Do you really want to delete the account \"%s\" and all it\'s transactions?</string>
    <string name="aldm_DeleteAccounts">Do you really want to delete the accounts \"%s\" and all their transactions?</string>
    <string name="Cancel">Cancel</string>
    <string name="NoDues">Looks like you\'ve no dues.</string>
    <string name="NoTransactions">Looks like you\'ve no transactions in here.</string>
    <string name="ContactsPermission">Contacts Permission</string>
    <string name="ContactsPermissionNeeded">Contacts permission is required to support sending reminder messages for claims.</string>
    <string name="ContactsPermissionNeededMigration">Contacts permission is required for migrating your contacts and to support sending messages as reminders for claims.</string>
    <string name="Due_x">Due %s</string>
    <string name="prefs_Information">MoneyBook is an open-source app developed by Daniel Guger.\n\nVersion: %1$s\nBuild: %2$d\n\nhttps://github.com/guger/MoneyBook</string>
    <string name="Information">Information</string>
    <string name="Permissions">Permissions</string>
    <string name="prefs_Permissions">Details about required permissions.</string>
    <string name="OK">OK</string>
    <string name="PermissionDetails">MoneyBook values your privacy and does only request permissions it absolutely needs:\n\n<b>Reading Contacts:</b>\nA key feature of MoneyBook is the reminder. Access to the address book is needed to link claims or debts with contacts, to be able to write a message to them if claims are outstanding.\n\n<b>Internet:</b>\nMoneyBook should provide you an excellent user experience. However, app crashes may occur. In this case, MoneyBook sends detailed error statistics to its developer, to help fixing the problem immediately. Thereby, just application relevant details (logs) are transmitted, no transactions or personal data.\n\nFor more information, feel free to contact the developer.</string>
    <string name="ContactsPermissionDenied">Contacts feature will be limited due to denied permission.</string>
    <string name="Retry">Retry</string>
    <string name="Balance_of_Budget" translatable="false">%1$s / %2$s</string>
    <string name="Left">Left</string>
    <string name="ChooseColor">Choose Color</string>
    <string name="EditBudget">Edit Budget</string>
    <string name="NewBudget">New Budget</string>
    <string name="AddBudget">Add Budget</string>
    <string name="Reports">Reports</string>
    <string name="Other">Other</string>
    <string name="PreferencesRestartRequired">The app requires a restart to apply the preference changes.</string>
    <string name="Restart">Restart</string>
    <string name="CrashReports">Send Crash Reports (recommended)</string>
    <string name="prefs_CrashReports">Send anonymous crash reports containing detailed error messages to the developer.</string>
    <string name="UsageStatistics">Send Usage Statistics</string>
    <string name="prefs_UsageStatistics">Send anonymous usage statistics to the developer. Those statistics contain technical data like performance, usage and hardware specifications.</string>
    <string name="x_Mio">%s mn</string>
    <string name="General">General</string>
    <string name="Currency">Currency</string>
    <string name="prefs_Currency">Choose the currency you want to use.</string>
    <string name="Default">Default</string>
    <string name="Dollar">Dollar</string>
    <string name="Euro">Euro</string>
    <string name="Pound">Pound</string>
    <string name="Yen">Yen</string>
    <string name="Close">Close</string>
    <string name="DueDate">Due Date</string>
    <string name="ChooseDueDate">Choose Due Date</string>
    <string name="ReminderNotificationTitleClaim">Pending Claim</string>
    <string name="ReminderNotificationTitleDebt">Pending Debt</string>
    <string name="ReminderNotificationTextClaimNoContact">You\'ve an open claim over %s.</string>
    <string name="ReminderNotificationTextDebtNoContact">You\'ve an open debt over %s.</string>
    <string name="ReminderNotificationTextClaimOneContact">%s owes you %s.</string>
    <string name="ReminderNotificationTextDebtOneContact">You owe %s %s.</string>
    <string name="ReminderNotificationTextClaimMultipleContacts">%d contacts owe you %s.</string>
    <string name="ReminderNotificationTextDebtMultipleContacts">You owe %d contacts %s.</string>
    <string name="TransactionDueDateBeforeDate">Please select a due date later than the transactions date.</string>
    <string name="Snooze">Snooze</string>
    <string name="Message">Message</string>
    <string name="Paid">Paid</string>
    <string name="ChooseDelay">Choose Snooze Delay</string>
    <string name="FiveHours">5 Hours</string>
    <string name="OneDay">1 Day</string>
    <string name="ThreeDays">3 Days</string>
    <string name="FiveDays">5 Days</string>
    <string name="OneWeek">1 Week</string>
    <string name="ReminderDelayed">Reminder delayed for %s.</string>
    <string name="ScreenOverlayNotPermitted">The snooze dialog can\'t be shown due to screen overlay being not permitted. Open settings to enable.</string>
    <string name="ReminderMessage">I\'ve borrowed you %s.\n\nReminded by MoneyBook.</string>
    <string name="NoSMSAppFound">It looks like there is no SMS application installed.</string>
    <string name="MarkAsPaid">Mark as Paid</string>
    <string name="Next">Next</string>
    <string name="Skip">Skip</string>
    <string name="GetStarted">Get Started</string>
    <string name="Welcome">Welcome to MoneyBook</string>
    <string name="YourPersonalFinanceManager">Your personal finance manager</string>
    <string name="StayOnTopOfYourFinances">Stay on top of your finances.</string>
    <string name="TrackSpendingsWithAccounts">Track your spendings with accounts</string>
    <string name="CreateAccountsOrganiseTransactions">Create up to four accounts and organize your transactions.</string>
    <string name="KeepEyeOfDues">Keep an eye on your dues</string>
    <string name="NeverForgetAnyDue">Get reminded about money you borrowed or lent.</string>
    <string name="OrganizeBudget">Organize your monthly budget</string>
    <string name="OrganizeInBudgets">Always know whats left.</string>
    <string name="GetStartedNow">Start tracking your finances. With your personal and secure finance manager.</string>
    <string name="FeatureInDevelopment">Unfortunately, this feature is not finished yet. Stay curious.</string>
    <string name="LetsGetStarted">Let\'s get started</string>
    <string name="MigrationCompletedSuccessfully">Migration completed successfully.</string>
    <string name="InitialBalance">Initial Balance</string>
    <string name="InvalidValue">Invalid value.</string>
    <string name="notification_channel_reminder">Reminders</string>
    <string name="notification_channel_reminder_description">Reminds you of your claims and debts.</string>
    <string name="OnBoardingMigrationCategoriesTitle">Which categories do you want to migrate?</string>
    <string name="OnBoardingMigrationTo20">Migration to 2.0</string>
    <string name="OnBoardingMigratingBookEntries">There are a few things to do before you can start. You will now be asked to choose the categories, which you want to convert to budgets. Afterwards, all your entries will be converted for MoneyBook 2.0. If you have no used categories, migration will start immediately.</string>
    <string name="OverlayRequired">Overlay Permission Required</string>
    <string name="OpenSettings">Open Settings</string>
    <string name="OverlayRequiredMessage">Drawing an overlay is required to display the snooze options.\nOpen the settings and permit MoneyBook to draw overlays.</string>
    <string name="Ignore">Ignore</string>
    <string name="SnoozeDisabled">Snooze functionality is disabled due to denied overlay permission.</string>
    <string name="MarkAsPaidToAccount">Move To Account</string>
    <string name="ChooseAccount">Choose Account</string>
    <string name="OpenDetails">Open Details</string>
    <string name="ContactsPermissionPermanentlyDenied">Contacts Permission permanently denied</string>
    <string name="ContactsPermissionPermanentlyDeniedMessage">The contacts permission is now permanently denied. To allow MoneyBook to read your contacts, please open the app settings.</string>
    <string name="TransferToAccount">Transfer to Account</string>
    <string name="ExportImport">Export &amp; Import</string>
    <string name="ExportImportData">Export/Import Transactions, Accounts, etc.</string>
    <string name="prefs_ExportImportData">Export or import your data encrypted, e.g. for a device change.</string>
    <string name="Export">Export</string>
    <string name="Import">Import</string>
    <string name="BudgetInsights">Budget Insights</string>
    <string name="ThisMonth">This Month</string>
    <string name="LastMonth">Last Month</string>
    <string name="LastYear">Last Year</string>
    <string name="Authentication">Authentication</string>
    <string name="pref_BiometricAuth">Biometric Authentication</string>
    <string name="prefs_BiometricAuth">Enable biometric authentication to securely log in to MoneyBook.</string>
</resources>