<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2021 Daniel Guger
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.PreferenceCategory android:title="@string/General">

        <androidx.preference.ListPreference
            android:defaultValue="Default"
            android:icon="@drawable/ic_currency"
            android:key="pref_currency"
            android:summary="@string/prefs_Currency"
            android:title="@string/Currency"
            app:entries="@array/Currencies"
            app:entryValues="@array/CurrencyValues" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/Authentication">

        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_analytics"
            android:key="pref_biometric_auth"
            android:summary="@string/prefs_BiometricAuth"
            android:title="@string/pref_BiometricAuth" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/Reports">

        <androidx.preference.SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_analytics"
            android:key="pref_analytics"
            android:summary="@string/prefs_UsageStatistics"
            android:title="@string/UsageStatistics" />

        <androidx.preference.SwitchPreference
            android:defaultValue="@bool/release"
            android:icon="@drawable/ic_crash_report"
            android:key="pref_crashlytics"
            android:summary="@string/prefs_CrashReports"
            android:title="@string/CrashReports" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/ExportImport">

        <androidx.preference.Preference
            android:icon="@drawable/ic_export_import"
            android:key="pref_export_import"
            android:summary="@string/prefs_ExportImportData"
            android:title="@string/ExportImportData" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/Other">

        <androidx.preference.Preference
            android:icon="@drawable/ic_permissions"
            android:key="pref_permissions"
            android:summary="@string/prefs_Permissions"
            android:title="@string/Permissions" />

        <androidx.preference.Preference
            android:icon="@drawable/ic_information"
            android:key="pref_information"
            android:title="@string/Information" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>