<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2021 Daniel Guger
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/actionAddAccount"
        android:icon="@drawable/ic_add_account"
        android:title="@string/AddAccount"
        app:showAsAction="always" />

    <item
        android:id="@+id/actionAddBudget"
        android:icon="@drawable/ic_add_budget"
        android:title="@string/AddBudget"
        app:showAsAction="always" />

    <item
        android:id="@+id/actionSearch"
        android:icon="@drawable/ic_search"
        android:title="@string/Search"
        android:visible="false"
        app:showAsAction="always" />
</menu>