<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 Daniel Guger
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/mBottomAppBarCoordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/mBottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/menu_new_transaction"
            app:navigationIcon="@drawable/ic_close" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/mNewTransactionTypeToggleButtonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilNewTransactionTitle"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNewTransactionTypeEarning"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Earning" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNewTransactionTypeExpense"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Expense" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNewTransactionTypeClaim"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Claim" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNewTransactionTypeDebt"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Debt" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNewTransactionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNewTransactionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Title" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>