<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2022 Daniel Guger
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorSurface">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mBudgetsInfoTitleToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="?android:toolbarStyle"
            app:theme="?android:toolbarStyle">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txvBudgetsInfoTitleBar"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/BudgetInsights"
                android:textAppearance="?textAppearanceHeadline1" />
        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/mBudgetsInsightsTimeSpanToggleButtonGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mBudgetsInfoTitleToolbar"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBudgetsInfoThisMonth"
                style="@style/Theme.App.MaterialButtonOutlined.BudgetsInfo"                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ThisMonth" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBudgetsInfoLastMonth"
                style="@style/Theme.App.MaterialButtonOutlined.BudgetsInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LastMonth" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBudgetsInfoLastYear"
                style="@style/Theme.App.MaterialButtonOutlined.BudgetsInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LastYear" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <at.guger.moneybook.core.ui.widget.chart.BudgetsInfoBarChart
            android:id="@+id/mBudgetsInfoBarChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mBudgetsInsightsTimeSpanToggleButtonGroup"
            tools:layout_height="200dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <import type="at.guger.moneybook.util.CurrencyFormat" />

        <variable
            name="viewModel"
            type="at.guger.moneybook.ui.home.budgets.BudgetsInfoViewModel" />
    </data>
</layout>