<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  * Copyright 2020 Daniel Guger
  ~  *
  ~  *    Licensed under the Apache License, Version 2.0 (the "License");
  ~  *    you may not use this file except in compliance with the License.
  ~  *    You may obtain a copy of the License at
  ~  *
  ~  *      http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  *    Unless required by applicable law or agreed to in writing, software
  ~  *    distributed under the License is distributed on an "AS IS" BASIS,
  ~  *    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  *    See the License for the specific language governing permissions and
  ~  *    limitations under the License.
  ~  */
  ~
  -->

<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mOnBoardingViewRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/view_onboarding_scene">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/mOnBoardingViewSlider"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </androidx.viewpager2.widget.ViewPager2>

    <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
        android:id="@+id/mOnBoardingViewIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:dotsColor="?colorPrimary"
        app:dotsCornerRadius="8dp"
        app:dotsSize="8dp"
        app:dotsSpacing="8dp"
        app:dotsStrokeColor="?colorPrimary"
        app:dotsStrokeWidth="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85">

    </com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator>

    <Button
        android:id="@+id/btnOnBoardingViewNext"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnOnBoardingViewSkip"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnOnBoardingViewStartMigrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/GetStarted"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/mOnBoardingViewSlider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>